--- a/.htaccess
+++ b/.htaccess
@@ -1,16 +1,8 @@
-# the following is for rewriting page urls to exclude the .html file extension
-# mod_rewrite starts here
-
 RewriteEngine on
 
-# does not apply to existing directories, meaning that if the folder exists on the server then don't change anything and don't run the Rule!
 
-RewriteCond %{REQUEST_FILENAME} !-d
+RewriteCond %{THE_REQUEST} /([^.]+)\.html [NC]
+RewriteRule ^ /%1 [NC,L,R]
 
-# check for file in directory with .html extension
-
-RewriteCond %{REQUEST_FILENAME}\.html -f
-
-# Here we actually show the page that has the .html extension
-
-RewriteRule ^(.*)$ $1.html [NC,L]
+RewriteCond %{REQUEST_FILENAME}.html -f
+RewriteRule ^ %{REQUEST_URI}.html [NC,L]
